<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <!-- Main Navigation -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.simats.aspirebridge.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_explore_jobs"
            app:destination="@id/exploreJobsFragment" />
        <action
            android:id="@+id/action_home_to_success_stories"
            app:destination="@id/successStoriesFragment" />
        <action
            android:id="@+id/action_home_to_resource_hub"
            app:destination="@id/resourceHubFragment" />
        <action
            android:id="@+id/action_home_to_admin_dashboard"
            app:destination="@id/adminDashboardFragment" />
        <action
            android:id="@+id/action_home_to_browse_mentors"
            app:destination="@id/browseMentorsFragment" />
    </fragment>

    <!-- Browse Mentors Flow -->
    <fragment
        android:id="@+id/browseMentorsFragment"
        android:name="com.simats.aspirebridge.ui.mentors.BrowseMentorsFragment"
        android:label="Find Mentors"
        tools:layout="@layout/fragment_browse_mentors">
        <action
            android:id="@+id/action_browse_mentors_to_mentor_profile"
            app:destination="@id/mentorProfileFragment" />
        <action
            android:id="@+id/action_browse_mentors_to_book_session"
            app:destination="@id/bookSessionFragment" />
    </fragment>

    <fragment
        android:id="@+id/mentorProfileFragment"
        android:name="com.simats.aspirebridge.ui.mentors.MentorProfileFragment"
        android:label="Mentor Profile"
        tools:layout="@layout/fragment_mentor_profile">
        <argument
            android:name="mentorId"
            app:argType="string" />
        <action
            android:id="@+id/action_mentor_profile_to_book_session"
            app:destination="@id/bookSessionFragment" />
    </fragment>

    <fragment
        android:id="@+id/bookSessionFragment"
        android:name="com.simats.aspirebridge.ui.booking.BookSessionFragment"
        android:label="Book Session"
        tools:layout="@layout/fragment_book_session">
        <argument
            android:name="mentorId"
            app:argType="string" />
    </fragment>

    <!-- Success Stories Flow -->
    <fragment
        android:id="@+id/successStoriesFragment"
        android:name="com.simats.aspirebridge.ui.stories.SuccessStoriesFragment"
        android:label="Success Stories"
        tools:layout="@layout/fragment_success_stories" />

    <!-- Resource Hub Flow -->
    <fragment
        android:id="@+id/resourceHubFragment"
        android:name="com.simats.aspirebridge.ui.resources.ResourceHubFragment"
        android:label="Resource Hub"
        tools:layout="@layout/fragment_resource_hub" />

    <!-- Job Explorer Flow -->
    <fragment
        android:id="@+id/exploreJobsFragment"
        android:name="com.simats.aspirebridge.ui.jobs.ExploreJobsFragment"
        android:label="Explore Jobs"
        tools:layout="@layout/fragment_explore_jobs">
        <action
            android:id="@+id/action_explore_jobs_to_central_government_jobs"
            app:destination="@id/centralGovernmentJobsFragment" />
        <action
            android:id="@+id/action_explore_jobs_to_state_government_jobs"
            app:destination="@id/stateGovernmentJobsFragment" />
    </fragment>

    <fragment
        android:id="@+id/centralGovernmentJobsFragment"
        android:name="com.simats.aspirebridge.ui.jobs.CentralGovernmentJobsFragment"
        android:label="Central Government Jobs"
        tools:layout="@layout/fragment_central_government_jobs">
        <action
            android:id="@+id/action_central_jobs_to_job_details"
            app:destination="@id/jobDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/stateGovernmentJobsFragment"
        android:name="com.simats.aspirebridge.ui.jobs.StateGovernmentJobsFragment"
        android:label="State Government Jobs"
        tools:layout="@layout/fragment_state_government_jobs">
        <action
            android:id="@+id/action_state_jobs_to_job_details"
            app:destination="@id/jobDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/jobDetailsFragment"
        android:name="com.simats.aspirebridge.ui.jobs.JobDetailsFragment"
        android:label="Job Details"
        tools:layout="@layout/fragment_job_details" />

    <!-- Search & Discovery -->
    <fragment
        android:id="@+id/nav_search"
        android:name="com.simats.aspirebridge.ui.search.SearchFragment"
        android:label="@string/nav_search"
        tools:layout="@layout/fragment_search" />

    <!-- Sessions -->
    <fragment
        android:id="@+id/nav_sessions"
        android:name="com.simats.aspirebridge.ui.sessions.SessionsFragment"
        android:label="@string/nav_sessions"
        tools:layout="@layout/fragment_sessions" />

    <!-- Chat & Messaging -->
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.simats.aspirebridge.ui.chat.ChatListFragment"
        android:label="@string/nav_chat"
        tools:layout="@layout/fragment_chat_list" />

    <!-- Profile -->
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.simats.aspirebridge.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

    <!-- Admin Flow -->
    <fragment
        android:id="@+id/adminLoginFragment"
        android:name="com.simats.aspirebridge.ui.admin.AdminLoginFragment"
        android:label="Admin Login"
        tools:layout="@layout/fragment_admin_login">
        <action
            android:id="@+id/action_admin_login_to_admin_dashboard"
            app:destination="@id/adminDashboardFragment" />
    </fragment>

    <fragment
        android:id="@+id/adminDashboardFragment"
        android:name="com.simats.aspirebridge.ui.admin.AdminDashboardFragment"
        android:label="Admin Dashboard"
        tools:layout="@layout/fragment_admin_dashboard">
        <action
            android:id="@+id/action_admin_dashboard_to_login"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_admin_dashboard_to_user_management"
            app:destination="@id/adminUserManagementFragment" />
        <action
            android:id="@+id/action_admin_dashboard_to_content_management_stories"
            app:destination="@id/adminContentManagementFragment" />
        <action
            android:id="@+id/action_admin_dashboard_to_content_management_resources"
            app:destination="@id/adminContentManagementFragment" />
    </fragment>

    <fragment
        android:id="@+id/adminContentManagementFragment"
        android:name="com.simats.aspirebridge.ui.admin.AdminContentManagementFragment"
        android:label="Content Management"
        tools:layout="@layout/fragment_admin_content_management">
        <argument
            android:name="contentType"
            app:argType="string"
            android:defaultValue="ALL" />
    </fragment>

    <fragment
        android:id="@+id/adminUserManagementFragment"
        android:name="com.simats.aspirebridge.ui.admin.AdminUserManagementFragment"
        android:label="User Management"
        tools:layout="@layout/fragment_admin_user_management">
        <argument
            android:name="userType"
            app:argType="string"
            android:defaultValue="ALL" />
    </fragment>

</navigation>